RESOLVED FIXED20464
matrix returned from getComputedStyle().webkitTransform should not contain transform-origin
https://bugs.webkit.org/show_bug.cgi?id=20464
Summary matrix returned from getComputedStyle().webkitTransform should not contain tr...
Simon Fraser (smfr)
Reported 2008-08-20 13:57:13 PDT
The matrix() returned by getComputedStyle().webkitTransform has the transform origin in it, which is, I think, incorrect. It should be possible to assign the result of getComputedStyle().webkitTransform back to element.style.webkitTransform and not have the element move.
Attachments
Testcase (2.44 KB, text/html)
2008-08-20 14:22 PDT, Simon Fraser (smfr)
no flags
Patch, testcase, changelog (7.62 KB, patch)
2008-08-20 14:52 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2008-08-20 14:22:53 PDT
Created attachment 22900 [details] Testcase
Simon Fraser (smfr)
Comment 2 2008-08-20 14:52:51 PDT
Created attachment 22901 [details] Patch, testcase, changelog
Dave Hyatt
Comment 3 2008-08-20 14:54:06 PDT
Comment on attachment 22901 [details] Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 4 2008-08-20 14:57:43 PDT
Committed r35862 M WebCore/rendering/style/RenderStyle.cpp M WebCore/rendering/style/RenderStyle.h M WebCore/ChangeLog M WebCore/css/CSSComputedStyleDeclaration.cpp M LayoutTests/ChangeLog r35862 = be1d24c242df001aa5ff47bc008712a76460dd98 (trunk)
Note You need to log in before you can comment on or make changes to this bug.