        Reviewed by Dave Hyatt

getComputedStyle() for webkitTransform should return a transform
        that does not have the transform origin baked into it.
        https://bugs.webkit.org/show_bug.cgi?id=20464

        Test: fast/css/getComputedStyle-transform.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::computedTransform):
        * rendering/style/RenderStyle.cpp:
        (WebCore::RenderStyle::applyTransform):
        * rendering/style/RenderStyle.h:


Canonical link: https://commits.webkit.org/28268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35862 268f45cc-cd09-0410-ab3c-d52691b4dbfc