WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -400,7 +400,7 @@ static PassRefPtr<CSSValue> computedTransform(RenderObject* renderer)
     IntRect box = sizingBox(renderer);
 
     AffineTransform transform;
-    renderer->style()->applyTransform(transform, box.size());
+    renderer->style()->applyTransform(transform, box.size(), false);
 
     RefPtr<WebKitCSSTransformValue> transformVal = WebKitCSSTransformValue::create(WebKitCSSTransformValue::MatrixTransformOperation);
 
